--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="everything">
         <div class="top-part">
             <header>
-                <logo><img src="images-vids/RE-logo-removebg-preview.png">Resident Evil</logo>
+                <logo><img src="images-vids/logo.png">Resident Evil</logo>
                 <ul>
                     <li><a href="/">About</a></li>
                     <li><a href="/">Characters</a></li>
@@ -55,7 +55,7 @@
                     <p>Jill Valentine</p>
                 </div>
                 <div class="box6 box">
-                    <img src="images-vids/carlos-oliveira.webp">
+                    <img src="images-vids/carlos-oliveira.png">
                     <p>Carlos Oliveira</p>
                 </div>
                 <div class="box7 box">
@@ -78,9 +78,14 @@
         </div>
         </div>
         <div class="more-part">
-            
+            <div class="form">
+                <p>The infected are coming. They're <span class="boldT">going to eat you.</span></span> <br>You need a gun.</p>
+                <button>Buy one now</button>
+            </div>
         </div>
-        <footer></footer>
+        <footer>
+            <p>made by <a href="https://github.com/emmahare">emmahare</a></p>
+        </footer>
     </div>
 </body>
 </html>
